--- a/History.rdoc
+++ b/History.rdoc
@@ -20,7 +20,7 @@
   * SheldonClient.get_recommendations( '123' ) ( Use SheldonClient.recommendations 123)
   * SheldonClient.get_highscores('123') (Use SheldonClient.high_scores)
   * SheldonClient.update_edge (Use SheldonClient.update(connnection: {}, payload )
-
+  * SheldonClient.get_node_ids_of_type ( user SheldonClient.all(:users) )
 
 
 
