--- a/History.rdoc
+++ b/History.rdoc
@@ -30,7 +30,8 @@
   * SheldonClient.get_recommendations( '123' )
   * SheldonClient.get_highscores('123') (Use SheldonClient.high_scores)
   * SheldonClient.update_edge (Use SheldonClient.update(connnection: {}, payload )
-  * SheldonClient.get_node_ids_of_type ( user SheldonClient.all(:users) )
+  * SheldonClient.get_node_ids_of_type ( use SheldonClient.all(:users) )
+  * SheldonClient.fetch_edges ( user SheldonClient.
 
 
 
