--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== Version 0.5.X
+* Allow to specify the direction in which you want the connection.( node.connection(:likes, direction: :outgoing)
+
+
 === Version 0.5.19
 * Adds support for pagerank traversal urls (SheldonClient::Traverse.pagerank)
 * Adds support for node containers (SheldonClient.node(2369).containers)
