--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+=== Version 1.0
+* Method missing support has been deprecated.
+  Methods like node.likes and node.suggestions will raise an exception,
+  use node.connections(:likes) or node.connections(:suggestions).
+
 === Version 0.5.24
 * Rewrite subscription action to create subscription edges. Use user_node.subscribe( other_node, :all_stories )
   * Valid subscription types are :all_stories and :featured_stories
