--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,7 +2,7 @@
 * Method missing support has been removed.
   Methods like node.likes and node.suggestions will raise an exception,
   use node.connections(:likes) or node.connections(:suggestions).
-* Exceptions are rise for response codes different to 2.X
+* Exceptions are rised for response codes different to 2.X
 * SheldonClient is now a module.
 
 === Version 0.5.24
