Fixing subscriber favorites url

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== Version 1.0.15
+* Fixed subscriber favorites traversal url
+
 === Version 1.0.8
 * Added support for retrieving project based on similarities recommendations
 from sheldon.
