--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== Version 1.0.16
+* Fixed wrong subscriber favorites response expectations seitens sheldon
+client
+
 === Version 1.0.15
 * Fixed subscriber favorites traversal url
 
