--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,8 @@
 === Version 1.0.16
+* Changed the way subscriber favorites json gets messed up. It gets
+messed up less now
+
+=== Version 1.0.16
 * Fixed wrong subscriber favorites response expectations seitens sheldon
 client
 
